Sign_up and Sign_in connect to database(firebase)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sign_upUI">
         <activity
+            android:name=".welcomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".signinactivity"
+            android:exported="false" />
+        <activity
             android:name=".SignUpActivity"
             android:exported="false" />
         <activity
