--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -12,13 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sign_upUI">
         <activity
-            android:name=".welcomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".signinactivity"
-            android:exported="false" />
-        <activity
-            android:name=".SignUpActivity"
+            android:name=".ContactActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -29,6 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="true" />
+        <activity
+            android:name=".signinactivity"
+            android:exported="true" />
     </application>
 
 </manifest>
